--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(Login)$ login.php [QSA,L]
-RewriteRule ^(API)$ API/index.php [QSA,L]
+RewriteRule ^(API)$ APIR/index.php [QSA,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d
